<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/et_write_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:hint="@string/smssdk_write_mobile_phone"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="11"
                android:textColor="#ff363636"
                android:drawablePadding="8dp"
                android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#e3e3e3"/>

    <EditText
        android:id="@+id/et_put_identify"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:textColor="#ff363636"
        android:textSize="16sp"
        android:maxLength="20"
        android:drawablePadding="8dp"
        android:hint="@string/reg_write_identify_code"
        android:singleLine="true"
        android:inputType="number" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#e3e3e3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="24dip"
        android:orientation="horizontal"
        android:layout_height="48dp">

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_phone_reg_bg"
            android:text="@string/reg_next"
            android:layout_alignParentRight="true"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>