<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:textSize="@dimen/text_18">

            <RelativeLayout
                android:id="@+id/rl_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:textColor="@color/base_gray">

                <TextView
                    android:id="@+id/tv_phonetitle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="账号"
                    android:textColor="@color/base_gray"
                    android:textSize="@dimen/text_18" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_phonetitle"
                    android:background="@null"
                    android:hint="@string/input_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/base_gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_18" />
            </RelativeLayout>

            <View
                android:id="@+id/spit_view1"
                android:layout_width="fill_parent"
                android:layout_height="0.6dp"
                android:layout_below="@+id/rl_phone"
                android:background="#e3e3e3" />

            <RelativeLayout
                android:id="@+id/rl_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spit_view1"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pswtitle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/welcomanim_title_psw"
                    android:textColor="@color/base_gray"
                    android:textSize="@dimen/text_18" />

                <EditText
                    android:id="@+id/et_psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/tv_forgetpsw"
                    android:layout_toRightOf="@+id/tv_pswtitle"
                    android:background="@null"
                    android:hint="@string/welcomanim_title_psw_hint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textColor="@color/base_gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_18" />

                <TextView
                    android:id="@+id/tv_forgetpsw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/welcomanim_title_forgetpsw"
                    android:textColor="@color/tab_message"
                    android:textSize="@dimen/text_18" />

                <ImageView
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_login_confirm"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:id="@+id/spit_view2"
                android:layout_width="fill_parent"
                android:layout_height="0.6dp"
                android:layout_below="@+id/rl_psw"
                android:background="#e3e3e3" />

            <Button
                android:id="@+id/login_btn"
                android:layout_marginTop="@dimen/text_20"
                android:text="登陆"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spit_view2" />

            <RelativeLayout
                android:id="@+id/rl_socialtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spit_view2"
                android:layout_marginTop="130dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/spit_view3"
                    android:layout_width="60dp"
                    android:layout_height="0.6dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/tv_socialtitle"
                    android:background="#e3e3e3" />

                <TextView
                    android:id="@+id/tv_socialtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/welcomanim_title_social"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_14" />

                <View
                    android:id="@+id/spit_view4"
                    android:layout_width="60dp"
                    android:layout_height="0.6dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/tv_socialtitle"
                    android:background="#e3e3e3" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_socialtitle"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_weibo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_weibo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/welcome_logo_weibo" />

                    <TextView
                        android:id="@+id/tv_social_title_weibo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_weibo"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_nomal"
                        android:text="@string/welcomanim_title_social_weibo"
                        android:textColor="@color/base_gray"
                        android:textSize="@dimen/text_14" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_wechat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_wechat"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/welcome_logo_wechat" />

                    <TextView
                        android:id="@+id/tv_social_title_wechat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_wechat"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_nomal"
                        android:text="@string/welcomanim_title_social_wechat"
                        android:textColor="@color/base_gray"
                        android:textSize="@dimen/text_14" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_qq"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/welcome_logo_qq" />

                    <TextView
                        android:id="@+id/tv_social_title_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_qq"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/margin_nomal"
                        android:text="@string/welcomanim_title_social_qq"
                        android:textColor="@color/base_gray"
                        android:textSize="@dimen/text_14" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/ly_sharefunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">


    </RelativeLayout>

</RelativeLayout>